@@ -154,6 +154,9 @@
 			RelativePath="testPlugins.cpp">
 		</File>
 		<File
+			RelativePath=".\TestSuite.h">
+		</File>
+		<File
 			RelativePath="testTools.cpp">
 		</File>
 	</Files>
