@@ -23,20 +23,37 @@
 #include "TestSuite.h"
 
 void  
-testBuildMPage(char *src_filename, char *dst_filename, FREE_IMAGE_FORMAT dst_fif) {
+testBuildMPage(char *src_filename, char *dst_filename, FREE_IMAGE_FORMAT dst_fif, unsigned bpp) {
 	// get the file type
 	FREE_IMAGE_FORMAT src_fif = FreeImage_GetFileType(src_filename);
 	// load the file
 	FIBITMAP *src = FreeImage_Load(src_fif, src_filename, 0); //24bit image 
-	if(FreeImage_GetBPP(src) != 24) {
-		FIBITMAP *tmp = FreeImage_ConvertTo24Bits(src);
+	unsigned src_bpp = FreeImage_GetBPP(src);
+	// convert to the requested bitdepth
+	if(src_bpp != bpp) {
+		FIBITMAP *tmp = NULL;
+		switch(bpp) {
+			case 8:
+				tmp = FreeImage_ConvertTo8Bits(src);
+				break;
+			case 24:
+				tmp = FreeImage_ConvertTo24Bits(src);
+				break;
+		}
+		assert(tmp != NULL);
 		FreeImage_Unload(src); 
 		src = tmp;
 	}
 
 	FIMULTIBITMAP *out = FreeImage_OpenMultiBitmap(dst_fif, dst_filename, TRUE, FALSE, FALSE); 
 	for(int size = 16; size <= 48; size += 16 ) { 
-		FIBITMAP *rescaled = FreeImage_Rescale(src, size, size, FILTER_LANCZOS3); 		
+		FIBITMAP *rescaled = FreeImage_Rescale(src, size, size, FILTER_CATMULLROM);
+		if((src_bpp == 8) && FreeImage_IsTransparent(src)) {
+			// copy the transparency table
+			BYTE *trns = FreeImage_GetTransparencyTable(src);
+			int count = FreeImage_GetTransparencyCount(src);
+			FreeImage_SetTransparencyTable(rescaled, trns, count);
+		}
 		FreeImage_AppendPage(out, rescaled); 
 		FreeImage_Unload(rescaled); 
 	} 
