@@ -33,6 +33,7 @@ Month day, 2005 - 3.7.0
 * [Herve Drolon] fixed incorrect behavior when reading JPEG comments containing special characters
 * [Herve Drolon] fixed incorrect behavior when reading JPEG ICC profiles with a size greater than 64 KB
 * [Herve Drolon] fixed a bug in TIFF plugin when loading malformed multipage TIFF
+* [Herve Drolon] fixed PluginTIFF not being thread safe
 
 February 20, 2005 - 3.6.1
 * [Ryan Rubley] fixed a memory leak in the metadata API
